[package]
name = "rust_docker_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "fs"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
rustorrent = "0.1.0"

